--- a/portfolio.html
+++ b/portfolio.html
@@ -104,12 +104,18 @@
     </main>
     <footer>
         <a class="logo-link link" href="./index.html" lang="en">Web<span class="accent">Studio</span></a>
-        <address>
-            <ul class="list menu">
-                <li class="menu-item"><a class="menu-link link" href="https://goo.gl/maps/2Wj12QhzYocX28hv6" target="_blank"
-                        rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a></li>
-                <li class="menu-item"><a class="menu-link link" href="mailto:info@example.com">info@example.com</a></li>
-                <li class="menu-item"><a class="menu-link link" href="tel:+380991111111">+38 099 111 11 11</a></li>
+        <address class="address">
+            <ul class="list contact-list">
+                <li class="contact-item">
+                    <a class="address-link link" href="https://goo.gl/maps/2Wj12QhzYocX28hv6" target="_blank"
+                        rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
+                </li>
+                <li class="contact-item">
+                    <a class="contact-link link" href="mailto:info@example.com">info@example.com</a>
+                </li>
+                <li class="contact-item">
+                    <a class="contact-link link" href="tel:+380991111111">+38 099 111 11 11</a>
+                </li>
             </ul>
         </address>
     </footer>
