--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <button class="modal-btn" type="button">Заказать услугу</button>
         </section>
         <!-- Our mission -->
-        <section>
+        <section class="our-mission">
             <ul class="list list-description">
                 <li class="description-mission">
                     <h3 class="title-description">Внимание к деталям</h3>
@@ -62,7 +62,7 @@
             </ul>
         </section>
         <!-- What we do -->
-        <section>
+        <section class="whatwedo">
             <h2 class="section-title">Чем мы занимаемся</h2>
             <ul class="list">
                 <li class="section-photo-list">
@@ -77,7 +77,7 @@
             </ul>
         </section>
         <!-- Our team -->
-        <section>
+        <section class="our-team">
             <h2 class="section-title">Наша команда</h2>
             <ul class="list">
                 <li class="employees-card">
@@ -103,8 +103,8 @@
             </ul>
         </section>
     </main>
-    <footer>
-        <a class="logo-link link" href="./index.html" lang="en">Web<span class="accent">Studio</span></a>
+    <footer class="footer">
+        <a class="logo-link link" href="./index.html" lang="en">Web<span class="accent accent-dark">Studio</span></a>
         <address class="address">
             <ul class="list contact-list">
                 <li class="contact-item">
