--- a/portfolio.html
+++ b/portfolio.html
@@ -121,7 +121,7 @@
         </section>
     </main>
     <footer class="footer">
-        <a class="logo-link link" href="./index.html" lang="en">Web<span class="accent">Studio</span></a>
+        <a class="logo-link link" href="./index.html" lang="en">Web<span class="accent accent-dark">Studio</span></a>
         <address class="address">
             <ul class="list contact-list">
                 <li class="contact-item">
