--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </a>
             <ul class="list menu">
                 <li class="menu-item">
-                    <a class="menu-link link" href="./index.html">Студия</a>
+                    <a class="menu-link link current" href="./index.html">Студия</a>
                 </li>
                 <li class="menu-item">
                     <a class="menu-link link" href="./portfolio.html">Портфолио</a>
@@ -111,10 +111,10 @@
                     <a class="address-link link" href="https://goo.gl/maps/2Wj12QhzYocX28hv6" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
                 </li>
                 <li class="contact-item">
-                    <a class="contact-link link" href="mailto:info@example.com">info@example.com</a>
+                    <a class="main-contact-link link" href="mailto:info@example.com">info@example.com</a>
                 </li>
                 <li class="contact-item">
-                    <a class="contact-link link" href="tel:+380991111111">+38 099 111 11 11</a>
+                    <a class="main-contact-link link" href="tel:+380991111111">+38 099 111 11 11</a>
                 </li>
             </ul>
         </address>
