--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
                     <a class="menu-link link" href="./index.html">Студия</a>
                 </li>
                 <li class="menu-item">
-                    <a class="menu-link link" href="./portfolio.html">Портфолио</a>
+                    <a class="menu-link link current" href="./portfolio.html">Портфолио</a>
                 </li>
                 <li class="menu-item">
                     <a class="menu-link link" href="">Контакты</a>
@@ -55,67 +55,67 @@
             </ul>
             <ul class="portfolio-cards">
                 <li class="cards-list list">
-                    <a class="card-link" href="">
+                    <a class="card-link link" href="">
                         <img src="./images/portfolio/1.jpg" alt="Технокряк" width="370" height="294">
                         <h3 class="projects-name">Технокряк</h3>
                         <p class="project-field">Веб-сайт</p>
                     </a>
                 </li>
                 <li class="cards-list list">
-                    <a class="card-link" href="">
+                    <a class="card-link link" href="">
                         <img src="./images/portfolio/2.jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294">
                         <h3 class="projects-name">Постер New Orlean vs Golden Star</h3>
                         <p class="project-field">Дизайн</p>
                     </a>
                 </li>
                 <li class="cards-list list">
-                    <a class="card-link" href="">
+                    <a class="card-link link" href="">
                         <img src="./images/portfolio/3.jpg" alt="Ресторан Seafood" width="370" height="294">
                         <h3 class="projects-name">Ресторан Seafood</h3>
                         <p class="project-field">Приложение</p>
                     </a>
                 </li>
                 <li class="cards-list list">
-                    <a class="card-link" href="">
+                    <a class="card-link link" href="">
                         <img src="./images/portfolio/4.jpg" alt="Проект Prime" width="370" height="294">
                         <h3 class="projects-name">Проект Prime</h3>
                         <p class="project-field">Маркетинг</p>
                     </a>
                 </li>
                 <li class="cards-list list">
-                    <a class="card-link" href="">
+                    <a class="card-link link" href="">
                         <img src="./images/portfolio/5.jpg" alt="Проект Boxes" width="370" height="294">
                         <h3 class="projects-name">Проект Boxes</h3>
                         <p class="project-field">Приложение</p>
                     </a>
                 </li>
                 <li class="cards-list list">
-                    <a class="card-link" href="">
+                    <a class="card-link link" href="">
                         <img src="./images/portfolio/6.jpg" alt="Inspiration has no Borders" width="370" height="294">
                         <h3 class="projects-name">Inspiration has no Borders</h3>
                         <p class="project-field">Веб-сайт</p>
                     </a>
                 </li>
                 <li class="cards-list list">
-                    <a class="card-link" href="">
+                    <a class="card-link link" href="">
                         <img src="./images/portfolio/7.jpg" alt="Издание Limited Edition" width="370" height="294">
                         <h3 class="projects-name">Издание Limited Edition</h3>
                         <p class="project-field">Дизайн</p>
                     </a>
                 </li>
                 <li class="cards-list list">
-                    <a class="card-link" href="">
+                    <a class="card-link link" href="">
                         <img src="./images/portfolio/8.jpg" alt="Проект LAB" width="370" height="294">
                         <h3 class="projects-name">Проект LAB</h3>
                         <p class="project-field">Маркетинг</p>
                     </a>
                 </li>
                 <li class="cards-list list">
-                <a class="card-link" href="">
-                    <img src="./images/portfolio/9.jpg" alt="Growing Business" width="370" height="294">
-                    <h3 class="projects-name">Growing Business</h3>
-                    <p class="project-field">Приложение</p>
-                </a>
+                    <a class="card-link link" href="">
+                        <img src="./images/portfolio/9.jpg" alt="Growing Business" width="370" height="294">
+                        <h3 class="projects-name">Growing Business</h3>
+                        <p class="project-field">Приложение</p>
+                    </a>
                 </li>
             </ul>
         </section>
@@ -129,10 +129,10 @@
                         rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
                 </li>
                 <li class="contact-item">
-                    <a class="contact-link link" href="mailto:info@example.com">info@example.com</a>
+                    <a class="main-contact-link link" href="mailto:info@example.com">info@example.com</a>
                 </li>
                 <li class="contact-item">
-                    <a class="contact-link link" href="tel:+380991111111">+38 099 111 11 11</a>
+                    <a class="main-contact-link link" href="tel:+380991111111">+38 099 111 11 11</a>
                 </li>
             </ul>
         </address>
